--- a/index.html
+++ b/index.html
@@ -1,1 +1,168 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Companion Object</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:700|Roboto:300" rel="stylesheet" type="text/css">
+
+
+    <!-- Theme CSS -->
+    <link href="css/grayscale.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <p class="intro-header">Software. Mobile. Android.</p>
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll hidit" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll hidit" href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll hidit" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-sm-6 col-xs-5">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-7">
+                            <img src="img/companionobject-logo.png" class="logo" alt="Companion Object" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-power-off animated"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>I am Companion Object.</h2>
+                <p class="justin">Expert Android knowledge and extensive mobile app development experience is what I offer you. You need a reliable partnter who wants your business to succeed, and who is passionate about it. Meet the level of mobile software consulting you haven't seen yet, at a price that scales with you.</p>
+                <p class="justin">Try me. Risk free.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Download Section -->
+    <section id="services" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h2>I am Android.</h2>
+                        <p class="justin">I specialise in performance, efficiency, memory usage, networking, battery impact. You can count on my expertise in tackling fragmentation. You need your product be ready for emerging markets, and properly localized. Don't let your idea fail because of poor execution. Choose me instead.</p>
+                        <p class="justin">Yes, I have been here for quite long. Who I haven't worked with...</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6"><i class="fa fa-reddit-square trans"></i></div>
+                    <div class="col-md-3 col-sm-6"><i class="fa fa-wordpress trans"></i></div>
+                    <div class="col-md-3 col-sm-6"><i class="fa fa-trello trans"></i></div>
+                    <div class="col-md-3 col-sm-6"><i class="fa fa-pied-piper trans"></i></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>I am here.</h2>
+                <p class="justin">Being selective helps in delivering top quality results, consistently. Your project requires careful attention, and your business requires reliability. Talk to me. Let me impress you.</p>
+                <p class="justin">I am your Companion.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="banner-social-buttons">
+                <a href="mailto:hello@companionobject.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">hello@companionobject.com</span></a>
+        </div>
+        <div class="row">
+            <div class="banner-social-buttons">
+                <a href="https://facebook.com/companionobject" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">fb/companionobject</span></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="banner-social-buttons">
+                <a href="https://twitter.com/companionobject" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">@companionobject</span></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; 2016</p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/grayscale.min.js"></script>
+
+</body>
+</html>
