--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>I am Companion Object.</h2>
-                <p class="justin">Expert Android knowledge and extensive mobile app development experience is what I offer you. You need a reliable partnter who wants your business to succeed, and who is passionate about it. Meet the level of mobile software consulting you haven't seen yet, at a price that scales with you.</p>
+                <p class="justin">Expert Android knowledge and extensive mobile app development experience is what I offer you. You need a reliable partner who wants your business to succeed, and who is passionate about it. Meet the level of mobile software consulting you haven't seen yet, at a price that scales with you.</p>
                 <p class="justin">Try me. Risk free.</p>
             </div>
         </div>
