--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <div class="row">
             <div class="banner-social-buttons">
                 <a href="mailto:hello@companionobject.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">hello@companionobject.com</span></a>
+            </div>
         </div>
         <div class="row">
             <div class="banner-social-buttons">
@@ -148,7 +149,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; 2016</p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            <p>Copyright &copy; 2016</p><br/><br/><br/><br/><br/><br/><br/><br/>
         </div>
     </footer>
 
