--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 col-sm-6"><i class="fa fa-reddit-square trans"></i></div>
-                    <div class="col-md-3 col-sm-6"><i class="fa fa-wordpress trans"></i></div>
-                    <div class="col-md-3 col-sm-6"><i class="fa fa-trello trans"></i></div>
-                    <div class="col-md-3 col-sm-6"><i class="fa fa-pied-piper trans"></i></div>
+                    <div class="col-md-6 col-sm-6 col-lg-4 col-lg-offset-2"><i class="fa fa-reddit-square trans"></i></div>
+                    <div class="col-md-6 col-sm-6 col-lg-4"><i class="fa fa-wordpress trans"></i></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-lg-4 col-lg-offset-2"><i class="fa fa-trello trans"></i></div>
+                    <div class="col-md-6 col-sm-6 col-lg-4"><i class="fa fa-pied-piper trans"></i></div>
                 </div>
             </div>
         </div>
