--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Companion Object</title>
+    <title>Companion Object - mobile DevOps for Android</title>
+
+    <meta property="og:image" content="img/companionobject-thumb.png" />
+    <meta property="og:title" content="Companion Object - mobile DevOps for Android" />
+    <meta property="og:description" content="Android DevOps and app development. Bring your app quality to the next level with Companion Object." /
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +44,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <p class="intro-header">Software. Mobile. Android.</p>
+                    <p class="intro-header">Mobile DevOps. Android.</p>
                 </a>
             </div>
 
@@ -92,9 +96,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>I am Companion Object.</h2>
-                <p class="justin">Expert Android knowledge and extensive mobile app development experience is what I offer you. You need a reliable partner who wants your business to succeed, and who is passionate about it. Meet the level of mobile software consulting you haven't seen yet, at a price that scales with you.</p>
-                <p class="justin">Try me. Risk free.</p>
+                <h2>Companion Object is mobile DevOps.</h2>
+                <p class="justin">It is easy to make an app. It is hard to make a great app. Whether you or your team is just starting, or already has an app in development, we will help you speed up the development process, decrease cost, increase quality, ensure a successful user engagement, generate more revenue, and be awesome.</p>
+                <p class="justin">Focus on developing great features instead of draining your resources on automated mobile testing, fragmentation, compatibility, error reporting, monitoring, continous integration, localisation, branding, and many other things we will handle for you.</p>
+                <p class="justin">Risk free.</p>
             </div>
         </div>
     </section>
@@ -105,18 +110,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
-                        <h2>I am Android.</h2>
-                        <p class="justin">I specialise in performance, efficiency, memory usage, networking, battery impact. You can count on my expertise in tackling fragmentation. You need your product be ready for emerging markets, and properly localized. Don't let your idea fail because of poor execution. Choose me instead.</p>
-                        <p class="justin">Yes, I have been here for quite long. Who I haven't worked with...</p>
+                        <h2>Companion Object is Android.</h2>
+                        <p class="justin">Thousands of devices with widely different performance, tens of Android versions multiplied by countles customizations, users from all over the world - are you sure your app works as well for everyone as it does for you?</p>
+                        <p class="justin">We will make sure you know how your app performs across your userbase, and solve problems with performance, memory usage, networking, battery impact, compatibility, and much more.</p>
+                        <p class="justin">No more embarassing bugs, delayed releases, blind hotfixing, and rollbacks. Do it the right way with us!</p>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-lg-4 col-lg-offset-2"><i class="fa fa-reddit-square trans"></i></div>
-                    <div class="col-md-6 col-sm-6 col-lg-4"><i class="fa fa-wordpress trans"></i></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-lg-4 col-lg-offset-2"><i class="fa fa-trello trans"></i></div>
-                    <div class="col-md-6 col-sm-6 col-lg-4"><i class="fa fa-pied-piper trans"></i></div>
                 </div>
             </div>
         </div>
@@ -126,9 +124,9 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>I am here.</h2>
-                <p class="justin">Being selective helps in delivering top quality results, consistently. Your project requires careful attention, and your business requires reliability. Talk to me. Let me impress you.</p>
-                <p class="justin">I am your Companion.</p>
+                <h2>Companion Object is here.</h2>
+                <p class="justin">Being selective helps in delivering top quality results, consistently. Your project requires careful attention, and your business requires reliability. Contact us and let us increase your revenue!</p>
+                <p class="justin">We are your Companion.</p>
             </div>
         </div>
         <div class="row">
@@ -167,5 +165,15 @@
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-87630710-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
