--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <title>Companion Object - mobile DevOps for Android</title>
 
-    <meta property="og:image" content="img/companionobject-thumb.png" />
+    <meta property="og:url" content="http://companionobject.com" />
+    <meta property="og:image" content="http://companionobject.com/img/companionobject-thumb.png" />
     <meta property="og:title" content="Companion Object - mobile DevOps for Android" />
     <meta property="og:description" content="Android DevOps and app development. Bring your app quality to the next level with Companion Object." /
 
